--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="text_gray">#4d4d4d</color>
     <color name="text_semi_dark_gray">#505050</color>
     <color name="text_green">#76bd1d</color>
+    <color name="text_blue">#1dbda8</color>
     <color name="text_light_gray">#747474</color>
     <color name="text_dark_gray">#353535</color>
     <color name="text_semi_light_gray">#c8c8c8</color>
