init notification mock and swipe layout in rv notification

--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:paddingTop="18dp"
-        android:paddingBottom="18dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:paddingLeft="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="1dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -45,16 +45,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textSize="12sp"
+                    android:textSize="11sp"
                     tools:text="PAYOUT DONE"
                     tools:textColor="@color/text_green" />
 
                 <TextView
                     android:id="@+id/txt_date"
+                    android:layout_marginLeft="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/text_semi_light_gray"
-                    android:textSize="12sp"
+                    android:textSize="11sp"
                     android:textStyle="bold"
                     tools:text=" - 27-Feb-2017" />
             </LinearLayout>
@@ -64,8 +65,9 @@
     </LinearLayout>
 
     <View
+        android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/gray_divider" />
 
 </LinearLayout>
