--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -1,9 +1,304 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView android:text="FAQ" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/contact_gray"
+        android:orientation="vertical"
+        android:padding="20dp">
 
-</LinearLayout>
+        <FrameLayout
+            android:id="@+id/grp_title_1"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="title1"/>
+
+            <ImageView
+                android:id="@+id/img_1"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_1"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="content1"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_2"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne2"/>
+
+            <ImageView
+                android:id="@+id/img_2"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_2"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne2"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_3"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne3"/>
+
+            <ImageView
+                android:id="@+id/img_3"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_3"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne3"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_4"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne4"/>
+
+            <ImageView
+                android:id="@+id/img_4"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_4"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne4"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_5"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne5"/>
+
+            <ImageView
+                android:id="@+id/img_5"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_5"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne5"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_6"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne6"/>
+
+            <ImageView
+                android:id="@+id/img_6"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_6"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne6"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_7"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne7"/>
+
+            <ImageView
+                android:id="@+id/img_7"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_7"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne7"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_8"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne8"/>
+
+            <ImageView
+                android:id="@+id/img_8"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_8"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne8"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_9"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne9"/>
+
+            <ImageView
+                android:id="@+id/img_9"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_9"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne9"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_10"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne10"/>
+
+            <ImageView
+                android:id="@+id/img_10"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_10"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne10"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_11"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne11"/>
+
+            <ImageView
+                android:id="@+id/img_11"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_11"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne11"/>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/grp_title_12"
+            style="@style/ExpandableTitleLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableTitleTextStyle"
+                android:text="titleOne12"/>
+
+            <ImageView
+                android:id="@+id/img_12"
+                style="@style/ExpandableTitleImageStyle"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/grp_12"
+            style="@style/ExpandableContentLayoutStyle">
+
+            <TextView
+                style="@style/ExpandableContentTextStyle"
+                android:text="contentOne12"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
