--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -141,7 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/your_referral_id_is"
-                android:textColor="@color/text_light_gray"
+                android:textColor="@color/text_gray_2"
                 android:textSize="20sp" />
 
             <TextView
