--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -54,7 +54,7 @@
                     android:layout_marginLeft="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/text_semi_light_gray"
+                    android:textColor="@color/text_gray_0"
                     android:textSize="11sp"
                     android:textStyle="bold"
                     tools:text=" - 27-Feb-2017" />
