--- a/app/src/main/res/layout/row_profile_footer.xml
+++ b/app/src/main/res/layout/row_profile_footer.xml
@@ -22,14 +22,14 @@
         <TextView
             android:text="@string/your_referral_id_is"
             android:textSize="19sp"
-            android:textColor="@color/text_light_gray"
+            android:textColor="@color/text_gray_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txt_referral_id"
             android:textSize="19sp"
-            android:textColor="@color/text_dark_gray"
+            android:textColor="@color/text_gray_5"
             android:textStyle="bold"
             tools:text="54680321"
             android:layout_width="wrap_content"
