--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,24 @@
         <item name="android:background">@color/green_color</item>
     </style>
 
+    <style name="ButtonGreenBorder">
+        <item name="android:background">@drawable/bg_white_rect_green_border</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/text_green</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <!--@color/text_gray_1-->
+    <style name="RadioButtonGreen">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@drawable/selector_text_notifications_filter</item>
+        <item name="android:button">@drawable/selector_radio_notifications</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="ButtonLinkStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -75,7 +93,7 @@
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
-    <!--<item name="android:background">@drawable/selector_navigation</item>-->
+    <!--<item name="android:background">@drawable/selector_text_navigation</item>-->
     <!--<item name="android:color">@color/text_gray</item>-->
     <style name="NavMenuStyle">
         <item name="android:layout_height">wrap_content</item>
@@ -87,7 +105,7 @@
         <item name="android:paddingBottom">11dp</item>
         <item name="android:paddingTop">11dp</item>
         <item name="android:paddingRight">20dp</item>
-        <item name="android:textColor">@drawable/selector_navigation</item>
+        <item name="android:textColor">@drawable/selector_text_navigation</item>
     </style>
 
     <style name="ProfileTxtKey">
@@ -96,7 +114,7 @@
         <item name="android:layout_marginLeft">8dp</item>
         <item name="android:layout_marginStart" tools:ignore="NewApi">8dp</item>
         <item name="android:layout_marginTop">8dp</item>
-        <item name="android:textColor">@color/text_light_gray</item>
+        <item name="android:textColor">@color/text_gray_2</item>
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:textSize">16sp</item>
     </style>
@@ -107,7 +125,7 @@
         <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_marginEnd" tools:ignore="NewApi">8dp</item>
         <item name="android:layout_marginTop">8dp</item>
-        <item name="android:textColor">@color/text_dark_gray</item>
+        <item name="android:textColor">@color/text_gray_5</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:textSize">16sp</item>
     </style>
