init notification dialog strings and selections

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:id="@+id/txt_notification_types"
                 style="@style/SpinnerTextViewStyle"
-                android:text="Validated Registration"/>
+                android:text="@string/all_notifications"/>
 
             <ImageView
                 style="@style/SpinnerImageViewStyle"/>
