--- a/app/src/main/res/layout/dialog_notification_filter.xml
+++ b/app/src/main/res/layout/dialog_notification_filter.xml
@@ -3,31 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:paddingTop="15dp"
+    android:paddingTop="10dp"
     android:paddingBottom="15dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
+    android:paddingLeft="25dp"
+    android:paddingRight="25dp"
     android:orientation="vertical">
 
     <RadioGroup
+        android:id="@+id/grp_radio_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <RadioButton
             android:id="@+id/rb_all_notification"
             style="@style/RadioButtonGreen"
-            android:text="All Notifications" />
+            android:text="@string/all_notifications" />
 
         <RadioButton
             android:id="@+id/rb_payout_done"
             style="@style/RadioButtonGreen"
-            android:checked="true"
-            android:text="Payout Done" />
+            android:text="@string/payout_done" />
 
         <RadioButton
             android:id="@+id/rb_validated_registration"
             style="@style/RadioButtonGreen"
-            android:text="Validated Registration" />
+            android:text="@string/validated_registration" />
 
     </RadioGroup>
 
@@ -39,23 +39,24 @@
 
         <Button
             android:id="@+id/btn_cancel"
-            android:layout_width="120dp"
-            android:layout_height="45dp"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
             style="@style/ButtonGreenBorder"
             android:text="@string/cancel"/>
 
         <android.support.v4.widget.Space
             android:layout_weight="1"
             android:layout_width="0dp"
+            android:minWidth="25dp"
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_apply"
-            android:layout_width="120dp"
-            android:layout_height="45dp"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
             android:textSize="14sp"
             style="@style/ButtonGreenStyle"
-            android:text="Apply"/>
+            android:text="@string/apply"/>
 
     </LinearLayout>
 
