init reports screen with tabs

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="text_gray_3">#4d4d4d</color>
     <color name="text_gray_4">#505050</color>
     <color name="text_gray_5">#353535</color>
+    <color name="text_gray_6">#525252</color>
     <color name="text_green">#76bd1d</color>
     <color name="text_blue">#1dbda8</color>
     <color name="text_white">#ffffff</color>
