--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -176,4 +176,9 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="TabBarTextStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
