--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -31,6 +31,13 @@
             android:text="@string/building_connections"
             android:textSize="20sp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/join_our_social_movement"
+            android:textSize="17sp"/>
+
     </LinearLayout>
 
     <ImageView
