--- a/app/src/main/res/layout/row_bottom_progress.xml
+++ b/app/src/main/res/layout/row_bottom_progress.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="vertical">
+
+<ProgressBar
     android:id="@+id/progress"
     style="@android:style/Widget.Holo.ProgressBar"
     android:layout_width="wrap_content"
@@ -7,4 +12,6 @@
     android:layout_gravity="center_horizontal"
     android:indeterminate="true"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp" />
+    android:paddingTop="10dp"/>
+
+</LinearLayout>
