--- a/app/src/main/res/layout/fragment_wizard_step_one.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_one.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:src="@drawable/xaba_red_logo"/>
+                android:src="@drawable/xaba_red_logo_bigger"/>
 
             <TextView
                 android:layout_width="match_parent"
