change API url address, add Referred Workers screen logic

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,10 @@
 
     <color name="contact_gray">#f7f7f7</color>
 
+    <color name="referred_worker_gray">#efefef</color>
+    <color name="referred_worker_dark_gray">#878787</color>
+    <color name="referred_worker_green">#77ca0f</color>
+    <color name="referred_worker_blue">#0c86ae</color>
+    <color name="referred_worker_red">#db1e26</color>
+
 </resources>
