--- a/app/src/main/res/layout/row_referred_worker.xml
+++ b/app/src/main/res/layout/row_referred_worker.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:background="@android:color/holo_red_light"/>
+        android:background="@color/gray"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,31 +29,30 @@
             android:id="@+id/txt_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Validated worker name"
             android:textColor="@color/dark_color"
-            android:textSize="16sp"/>
+            android:textSize="18sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txt_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12-21-2016"
                 android:textColor="@color/referred_worker_dark_gray"
-                android:textSize="12sp"/>
+                android:textSize="14sp"/>
 
             <TextView
                 android:id="@+id/txt_is_valid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
-                android:text="Invalid"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="12sp"/>
+                android:textColor="@color/referred_worker_red"
+                android:textSize="14sp"/>
 
         </LinearLayout>
 
