--- a/app/src/main/res/layout/row_profile_footer.xml
+++ b/app/src/main/res/layout/row_profile_footer.xml
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13sp"
-        android:text="@string/delete_account"
+        android:text="@string/deactivate_account"
         android:textColor="@color/text_red"/>
 
 </LinearLayout>
