--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -132,6 +132,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/btn_register_another_worker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
