--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="dark_text_color">#2a2a2a</color>
     <color name="red">#e51f28</color>
     <color name="green">#d9f2ba</color>
+    <color name="dark_green">#76bd1d</color>
 
 
     <color name="text_red">#e51f28</color>
