init filter dialog ui

--- a/app/src/main/res/layout/row_commission_log.xml
+++ b/app/src/main/res/layout/row_commission_log.xml
@@ -82,7 +82,7 @@
                     android:gravity="end"
                     android:textColor="@color/dark_color"
                     android:textSize="20sp"
-                    tools:text="@string/kes" />
+                    android:text="@string/kes" />
 
             </LinearLayout>
 
