--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -181,4 +181,15 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="CommissionFilterGroupTitle">
+        <item name="android:textSize">17sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/gray_0</item>
+        <item name="android:textColor">@color/text_gray_7</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingLeft">15dp</item>
+    </style>
+
 </resources>
