init load more for first pages

--- a/app/src/main/res/layout/row_commission_log.xml
+++ b/app/src/main/res/layout/row_commission_log.xml
@@ -6,6 +6,7 @@
     android:background="@color/referred_worker_gray">
 
     <LinearLayout
+        android:id="@+id/grp_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
