--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -136,6 +136,40 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/program"
+            android:textColor="@color/dark_color"
+            android:textSize="16sp"/>
+
+        <LinearLayout
+            android:id="@+id/grp_program"
+            style="@style/SpinnerLayoutStyle"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/txt_program"
+                style="@style/SpinnerTextViewStyle"
+                android:text="@string/select_program"/>
+
+            <ImageView
+                style="@style/SpinnerImageViewStyle"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="#d9f2ba"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/industry"
             android:textColor="@color/dark_color"
             android:textSize="16sp"/>
