Implemented selecting programs when registering another worker. Implemented displaing the selected programs on my profile.

--- a/app/src/main/res/layout/dialog_chooser.xml
+++ b/app/src/main/res/layout/dialog_chooser.xml
@@ -31,6 +31,7 @@
             android:layout_height="64dp"
             android:background="@color/green_color"
             android:textColor="@color/white"
+            android:text="@string/select"
             android:textSize="17sp"/>
 
         <View
