--- a/app/src/main/res/layout/activity_partners.xml
+++ b/app/src/main/res/layout/activity_partners.xml
@@ -6,15 +6,16 @@
     android:orientation="vertical"
     android:paddingEnd="30dp"
     android:paddingStart="30dp"
-    android:weightSum="3">
+    android:weightSum="4">
 
     <FrameLayout
         android:id="@+id/frame_layout_one"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1.2">
 
         <ImageView
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -24,9 +25,10 @@
 
     <FrameLayout
         android:id="@+id/frame_layout_two"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1.2">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -38,6 +40,7 @@
 
     <FrameLayout
         android:id="@+id/frame_layout_three"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -49,6 +52,25 @@
             android:src="@drawable/partner_nita"/>
 
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/frame_layout_four"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.4">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:src="@drawable/partner_giz_logo"/>
+
+    </FrameLayout>
+
+    <android.support.v4.widget.Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
