--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -20,15 +20,37 @@
         android:textColor="@color/dark_text_color"
         android:textSize="16sp"/>
 
-    <ImageView
-        android:id="@+id/img_tick"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+    <FrameLayout
         android:layout_weight="0"
-        android:src="@null"
-        android:visibility="invisible"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/img_tick"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:src="@null"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tv_registered"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:textColor="@color/text_gray_2"
+            android:textSize="13sp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@drawable/bg_round_white_gray_border"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/registered"/>
+
+    </FrameLayout>
 
 </LinearLayout>
