--- a/app/src/main/res/layout/row_profile_profesion.xml
+++ b/app/src/main/res/layout/row_profile_profesion.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/row_profile_frame"
     android:background="@color/profession_green"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/row_programs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="15dp"
+        android:layout_marginLeft="16dp"
+        android:text="@string/programs_dot"
+        android:textColor="@color/dark_color"
+        android:textSize="16sp"
+        android:visibility="invisible"/>
+
+    <RelativeLayout
         android:paddingTop="5dp"
         android:paddingBottom="10dp"
         android:layout_marginRight="16dp"
@@ -55,4 +66,4 @@
 
     </RelativeLayout>
 
-</FrameLayout>
+</LinearLayout>
