--- a/app/src/main/res/layout/row_edit_program.xml
+++ b/app/src/main/res/layout/row_edit_program.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/row_profile_frame"
-android:background="@color/profession_green"
-android:orientation="horizontal"
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
-
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/row_profile_frame"
+    android:background="@color/profession_green"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#d9f2ba"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -36,6 +29,9 @@ android:layout_height="wrap_content">
             style="@style/SpinnerImageViewStyle"/>
 
     </LinearLayout>
-</LinearLayout>
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
+</LinearLayout>
