--- a/app/src/main/res/layout/row_edit_profile_profession.xml
+++ b/app/src/main/res/layout/row_edit_profile_profession.xml
@@ -12,6 +12,7 @@
         android:id="@+id/grp_industry_wrap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="vertical">
 
         <TextView
