add fix general item selection in select industry add spacing in professions

--- a/app/src/main/res/layout/row_profile_profesion.xml
+++ b/app/src/main/res/layout/row_profile_profesion.xml
@@ -59,6 +59,8 @@
 
         <TextView
             android:id="@+id/txt_profession"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             style="@style/ProfileTxtValue"
             tools:text="Antenna repair" />
         <!--android:layout_below="@id/txt_category"-->
