--- a/app/src/main/res/layout/row_edit_program.xml
+++ b/app/src/main/res/layout/row_edit_program.xml
@@ -22,6 +22,7 @@
 
         <TextView
             android:id="@+id/txt_program"
+            android:paddingRight="8dp"
             style="@style/SpinnerTextViewStyle"
             android:text="@string/select_program"/>
 
