--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -148,6 +148,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/dark_color</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:paddingRight">15dp</item>
     </style>
 
     <style name="ExpandableTitleImageStyle">
