add default program

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"/>
 
     <com.sstgroup.xabaapp.ui.widgets.DimmedProgressBar
+        android:id="@+id/progress"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
